test/langtools/tools/javac/sealed/erroneous_permits/MultipleErroneousPermittedTypes.out
MultipleErroneousPermittedTypes.java:7:36: compiler.err.illegal.forward.ref
MultipleErroneousPermittedTypes.java:7:39: compiler.err.illegal.forward.ref
2 errors
